feat - cart - Add API endpoint to get cart by public uuid
